# nonebot-plugin-wait-a-minute

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.en-US.md  README.md  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: Release.yml
nonebot_plugin_wait_a_minute/: __init__.py  config.py
