[project]
name = 'nonebot-plugin-wait-a-minute'
version = '0.5.0'
description = 'A nonebot plugin for running some func before closing the bot'
authors = [{ name = 'shoucandanghehe', email = 'wallfjjd@gmail.com' }]
dependencies = ['nonebot2>=2.4.4']
requires-python = '>=3.10'
readme = 'README.md'
license = { text = 'MIT' }

[build-system]
requires = ['uv_build>=0.11.0,<0.12.0']
build-backend = 'uv_build'

[tool.uv.build-backend]
module-name = 'nonebot_plugin_wait_a_minute'
module-root = ''

[dependency-groups]
dev = [
    'nonebot2[all]>=2.4.4',
    'ruff>=0.15.7',
    'mypy>=1.19.1',
    'nonebot-adapter-onebot>=2.4.6',
    'nonebot-adapter-qq>=1.6.7',
    'basedpyright>=1.38.3',
]

[tool.ruff]
line-length = 120
target-version = 'py310'

[tool.ruff.lint]
select = [
    'F',     # pyflakes
    'E',     # pycodestyle errors
    'W',     # pycodestyle warnings
    'C90',   # mccabe
    'I',     # isort
    'N',     # PEP8-naming
    'UP',    # pyupgrade
    'YTT',   # flake8-2020
    'ANN',   # flake8-annotations
    'ASYNC', # flake8-async
    'S',     # flake8-bandit
    'BLE',   # flake8-blind-except
    'FBT',   # flake8-boolean-trap
    'B',     # flake8-bugbear
    'A',     # flake8-builtins
    'COM',   # flake8-commas
    'C4',    # flake8-comprehensions
    'DTZ',   # flake8-datetimez
    'T10',   # flake8-debugger
    'EM',    # flake8-errmsg
    'FA',    # flake8-future-annotations
    'ISC',   # flake8-implicit-str-concat
    'ICN',   # flake8-import-conventions
    'PIE',   # flake8-pie
    'T20',   # flake8-print
    'PYI',   # flake8-pyi
    'Q',     # flake8-quotes
    'RSE',   # flake8-raise
    'RET',   # flake8-return
    'SLF',   # flake8-self
    'SLOT',  # flake8-slots
    'SIM',   # flake8-simplify
    'TID',   # flake8-tidy-imports
    'TC',    # flake8-type-checking
    'ARG',   # flake8-unused-arguments
    'PTH',   # flake8-use-pathlib
    'ERA',   # eradicate
    'PD',    # pandas-vet
    'PGH',   # pygrep-hooks
    'PL',    # pylint
    'TRY',   # tryceratops
    'FLY',   # flynt
    'FAST',  # FastAPI
    'PERF',  # Perflint
    'FURB',  # refurb
    'RUF',   # Ruff-specific rules
]
ignore = [
    'E501',   # 过长的行由 ruff format 处理, 剩余的都是字符串
    'ANN202', # 向 NoneBot 注册的函数
    'TRY003',
    'COM812', # 强制尾随逗号
    'TID252', # 相对导入
    'ISC001', # format warning
    'RUF002', # docstring 中的全角标点
    'RUF003', # 注释中的全角标点
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'double'

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ['id']

[tool.ruff.format]
quote-style = 'single'

[tool.basedpyright]
pythonVersion = '3.10'
pythonPlatform = 'All'
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = 'standard'

[tool.nonebot]
plugins = ['nonebot_plugin_wait_a_minute']
